Update dependencies in browser package

--- a/packages/browser/src/app/components/Layout/Layout.scss
+++ b/packages/browser/src/app/components/Layout/Layout.scss
@@ -1,3 +1,11 @@
-.Layout {
-  color: red;
+@use 'partials' as p;
+
+.layout {
+  h1 {
+    color: p.lighten(p.$themeBlue, 50);
+
+    @include p.breakpoint(p.$screenL) {
+      color: p.darken(p.$themeBlue, 50);
+    }
+  }
 }
